syntax = "proto3";

package ticketPackage;

service Ticket {
  rpc createTicket(CreateTicketRequest) returns (TicketItem);
  rpc readTicket(TicketIdRequest) returns (TicketItem);
  rpc readEventTickets(EventIdRequest) returns (stream TicketItem);
  rpc getAttendee(TicketIdRequest) returns (InvoiceItem);
  rpc getEvent(TicketIdRequest) returns (EventItem);
}

message CreateTicketRequest {
  int32 eventId = 1;
  int32 invoiceId = 2;
  string validUntil = 3;
}

message TicketIdRequest {
  int32 id = 1;
}

message EventIdRequest {
  int32 eventId = 1;
}

message TicketItem {
  int32 id = 1;
  int32 eventId = 2;
  int32 invoiceId = 3;
  string validUntil = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

message InvoiceItem {
  int32 id = 1;
  int32 addressee = 2;
}

message EventItem {
  int32 id = 1;
  int32 name = 2;
}
